--- a/frontend/src/app/components/sections/reservas/display/activities/tour/tour-activity-display.component.html
+++ b/frontend/src/app/components/sections/reservas/display/activities/tour/tour-activity-display.component.html
@@ -2,7 +2,7 @@
     <app-card-display (edit)="edit()" [title]="title">   
         <li app-data-item-display icon="calendar" title="Fecha">
             <ng-container *ngIf="(item | show:'tourActivity':'duracion') == 1 else fullDates">
-                {{item | show:'tourActivity':'date_start'}}</ng-container>           
+                {{$any(item | show:'tourActivity':'date_start') | date: 'dd-MM-yy' }}</ng-container>           
         </li> 
         <li app-data-item-display icon="clock" title="Horario">
             {{item | show:'tourActivity':'time_start'}} - {{item | show:'tourActivity':'time_end'}}
