--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -74,6 +74,42 @@ body{
     font-size: 80%;
 }
 
+// scrollbar 
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: $primary;
+  border: 38px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: $primary;
+}
+::-webkit-scrollbar-thumb:active {
+  background: $primary;
+}
+::-webkit-scrollbar-track {
+  background: $secondary;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: $secondary;
+}
+::-webkit-scrollbar-track:active {
+  background: $secondary;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
 
 
 
