--- a/frontend/src/app/components/sections/login/login.component.scss
+++ b/frontend/src/app/components/sections/login/login.component.scss
@@ -30,3 +30,10 @@
     margin-left: -200%;
 
 }
+
+.img-bkg{
+
+    background-image: url("../../../../assets/img/background.jpg");
+    background-size: cover;
+    background-position: center center;
+}
