--- a/frontend/src/app/components/sections/login/login.component.html
+++ b/frontend/src/app/components/sections/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="h-100 d-flex justify-content-center align-items-center img-bkg">
+<div class="h-100 d-flex justify-content-center align-items-center img-bkg position-relative">
 
-    <div class="text-center bg-primary shadow-lg">
+    <div class="text-center bg-primary shadow-lg rounded-3 position-relative">
         <div class="display-1">
             <div class="text-light">
                 <i class="bi bi-brightness-alt-high display-1 "></i>
