--- a/frontend/src/app/components/sections/login/login.component.scss
+++ b/frontend/src/app/components/sections/login/login.component.scss
@@ -31,9 +31,15 @@
 
 }
 
-.img-bkg{
+.img-bkg:before{
 
     background-image: url("../../../../assets/img/background.jpg");
     background-size: cover;
     background-position: center center;
+    width: 100%;
+    height: 100%;
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    filter: saturate(30%);
 }
