--- a/frontend/src/app/components/shared/table/table.component.html
+++ b/frontend/src/app/components/shared/table/table.component.html
@@ -41,8 +41,8 @@
 </tbody>
 
 </table>
-<ul class="pagination">
-  <li class="page-item" *ngFor="let page of pages" (click)="currentPage=page"><a class="page-link" [ngClass]="{active:page==currentPage}">{{page}}</a></li>    
+<ul class="pagination" *ngIf="pages && pages.length > 1" >
+  <li class="page-item pointer" *ngFor="let page of pages" (click)="currentPage=page" [ngClass]="{active:page==currentPage}"><a class="page-link" >{{page}}</a></li>    
 </ul>
 
 <ng-content></ng-content>
