--- a/frontend/src/app/components/layout/menu/menu.component.scss
+++ b/frontend/src/app/components/layout/menu/menu.component.scss
@@ -22,7 +22,7 @@
 
 .list-group-item.app-menu-item:hover, .list-group-item.app-menu-item.active{
 
-    background-color: hsla(0, 0%, 0%, 1) !important;
+    background-color: hsl(224deg 72% 55%) !important;
     cursor: pointer;
 }
 
