--- a/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
+++ b/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
@@ -17,7 +17,7 @@
     </app-card-display>
     
     <footer>
-        <div class="text-left">
+        <div class="text-end">
             <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
         </div>
     </footer>    
