--- a/frontend/src/app/components/sections/salidas/display/salidas-display.component.html
+++ b/frontend/src/app/components/sections/salidas/display/salidas-display.component.html
@@ -13,7 +13,7 @@
     </app-card-display>  
     
     <footer>
-        <div class="text-left">
+        <div class="text-end">
             <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
         </div>
     </footer>    
