--- a/frontend/src/app/components/shared/display/activities-list/activities-list.component.html
+++ b/frontend/src/app/components/shared/display/activities-list/activities-list.component.html
@@ -5,7 +5,7 @@
     </div>  
 </div>
 <div style="max-height:200px" class="overflow-auto" *ngIf="activities.length else noActivities">
-    <table class="table table-striped table-hover align-middle table-sm ">
+    <table class="table table-striped align-middle table-sm ">
         <thead>
             <tr>
                 <th *ngFor="let column of columns; let i = index">
