--- a/frontend/src/app/components/shared/display/pax-list/pax-list.component.html
+++ b/frontend/src/app/components/shared/display/pax-list/pax-list.component.html
@@ -4,7 +4,7 @@
       Pasajeros <button class="btn btn-warning button-table btn-sm" (click)="open()" style="border-radius: 50%;"><i class="bi bi-plus h5"></i></button>    
     </div>  
 </div>
-<table  class="table table-striped table-hover align-middle table-sm " *ngIf="passengers.length else noPax">
+<table  class="table table-striped align-middle table-sm " *ngIf="passengers.length else noPax">
     <thead>
         <tr>
             <th *ngFor="let column of ['Nombre','Agencia']; let i = index" > 
