--- a/frontend/src/app/components/shared/form/custom-fields/item-picker/list/item-list.component.html
+++ b/frontend/src/app/components/shared/form/custom-fields/item-picker/list/item-list.component.html
@@ -1,14 +1,14 @@
-<div [ngSwitch]="type" class="items-list">
+<div [ngSwitch]="type" class="items-list card p-3" style="font-size: 90%;">
     <app-table *ngSwitchCase="'empresa'" [config]="tableConfig" (buttonClick)="form()">
         <ng-template let-data="data" #empresas>
             <tr (click)="display(data)" class="pointer">
-                <td>{{data | show:'empresa':'nombre'}} </td>
-                <td>{{data | show:'empresa':'documento'}} </td>
-                <td>{{data | show:'empresa':'direccion'}} </td>
-                <td> 
+                <td >{{data | show:'empresa':'nombre'}} </td>
+                <td >{{data | show:'empresa':'documento'}} </td>
+                <td >
                     <div><i class="bi bi-telephone me-2"></i> {{data | show:'empresa':'lista_telefonos'}}</div>
-                    <div><i class="bi bi-envelope me-2"></i> {{data | show:'empresa':'lista_emails'}} </div>  
-                </td>
+                    <div><i class="bi bi-envelope me-2"></i> {{data | show:'empresa':'lista_emails'}} </div>
+                    <div><i class="bi bi-map me-2"></i> {{data | show:'empresa':'direccion'}} </div>                    
+                </td>               
             </tr>
         </ng-template>        
     </app-table>
