--- a/frontend/src/app/components/shared/form/input/input.component.html
+++ b/frontend/src/app/components/shared/form/input/input.component.html
@@ -7,11 +7,19 @@
 <!-- PLANTILLAS -->
 
 <ng-template let-name="name" let-value="value" let-title="title" #text>
-    <label>{{title}}</label><input type="text" class="form-control" [value]="value[0] || null" [name]="name[0]"  (input)="update($any($event.target).value);">
+    
+    <div class="form-floating ">
+        <input type="text" class="form-control"  placeholder="{{title}}" [value]="value[0] || null" [name]="name[0]"  (input)="update($any($event.target).value);">
+        <label>{{title}}</label>
+    </div>
+   
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title" #number>
-    <label>{{title}}</label><input type="number" class="form-control" [name]="name[0]" [value]="value[0] || null" (input)="update($any($event.target).value)">
+    <div class="form-floating">
+        <input type="number" class="form-control"  placeholder="{{title}}" [value]="value[0] || null" [name]="name[0]"  (input)="update($any($event.target).value);">
+        <label>{{title}}</label>
+    </div>    
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title"   let-options="options"  #select>
@@ -27,21 +35,21 @@
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options"  #time>
-    <label>{{title}}</label>
+<!--     <label>{{title}}</label> -->
     <app-date-time-picker [value]="value[0]" [title]="title" (timeChange)="update($event)" [dateHidden]="true"></app-date-time-picker>
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options"  #itemPicker>
-    <label>{{title}}</label>
+   <!--  <label>{{title}}</label> -->
     <app-item-picker [value]="value[0]" [title]="title" [options]="options" (inputChange)="update($event)" [type]="type" [item]="item"></app-item-picker>
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options"  #dateTime>
-    <label>{{title}}</label>
+    <!-- <label>{{title}}</label> -->
     <app-date-time-picker [value]="value[0]" [time]="value[1]" [title]="title" (inputChange)="update($event)" (timeChange)="update($event,1)"></app-date-time-picker>
 </ng-template>
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options"  #paxList>
-    <label>{{title}}</label>
+    <!-- <label>{{title}}</label> -->
     <app-passengers-list [value]="value[0]" [title]="title" (inputChange)="update($event)"></app-passengers-list>
 </ng-template>
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options" #activitiesList>
@@ -50,9 +58,9 @@
         [value]="value[0]" [title]="title" [title]="title" [activitiesGroupItem]="item" [type]="type" (inputChange)="update($event)">
     </app-activities-list-form-admin>
 </ng-template>
-<ng-template let-name="name" let-value="value" let-title="title" let-options="options" #activitiesList>
-    <label>{{title}}</label>
-    <app-rooms-list [value]="value[0]" (inputChange)="update($event)"></app-rooms-list>
+<ng-template let-name="name" let-value="value" let-title="title" let-options="options" #roomsList>
+    <!-- <label>{{title}}</label> -->
+    <app-rooms-list [value]="value[0]" (inputChange)="update($event)" [title]="title"></app-rooms-list>
 </ng-template>
 <ng-template let-name="name" let-value="value" let-title="title" let-options="options" #paxList>
     <app-pax-list-form-admin [value]="value[0]" (inputChange)="update($event)" [item]="item"></app-pax-list-form-admin>
