--- a/frontend/src/app/components/shared/modal/modal.component.html
+++ b/frontend/src/app/components/shared/modal/modal.component.html
@@ -1,8 +1,7 @@
-<div class="p-5 text-center">
-    <div><i class="bi h3 {{icon}} display-4"></i></div>
-    <h5 class="my-5 text-center">{{message}}</h5>
-    <hr>
-    <button class="btn btn-primary" (click)="back()">
+<div class="text-center">
+    <div class="m-0"><i class="bi {{icon}} display-4 m-0"></i></div>
+    <h5 class="mt-2 mb-3 text-center">{{message}}</h5>
+    <button class="btn {{btnColor}}" (click)="back()">
         {{button }}
     </button>
 </div>
