--- a/frontend/src/app/components/layout/canvas/header-canvas/header-canvas.component.html
+++ b/frontend/src/app/components/layout/canvas/header-canvas/header-canvas.component.html
@@ -1,4 +1,4 @@
-<div class="header-canvas d-flex align-items-stretch justify-content-between bg-primary">
+<div class="header-canvas d-flex align-items-stretch justify-content-between {{color}}">
 
     <div class="text-light px-3 me-3 d-flex justify-content-center align-items-center border-end border-2">
         <i class="fs-2 {{config?.icon}}"></i>
