--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -41,7 +41,9 @@ $travelApp-theme: mat.define-light-theme((
 
 $primary : #4392d5;
 $warning: #ff8960;
+$success:#4fa17b;
 $info: #8bb3bf;
+$danger:#c9525e;
 $dark: #444d54;
 
 
@@ -75,7 +77,7 @@ body{
 
 .btn-edit{border-radius:50%;}
 
-.btn-warning, .btn-primary, .btn-info,.btn-warning:hover, .btn-primary:hover, .btn-info:hover{
+.btn-warning, .btn-primary, .btn-info,.btn-success,.btn-danger,.btn-warning:hover, .btn-primary:hover, .btn-outline-primary:hover, .btn-info:hover, .btn-success:hover, .btn-danger:hover{
 
   color: $light;
 }
@@ -91,6 +93,49 @@ body{
   opacity: 0.75;
   transform: scale(0.85) translateY(-1.1rem) translateX(0.15rem);
 }
+
+// step-form
+
+.active .bs-stepper-circle {
+
+  background-color: #4392d5;
+
+}
+
+.active .bs-stepper-label {
+
+  color: #4392d5;
+
+}
+
+.bs-stepper-circle{
+
+  background-color: #969ca1;
+}
+
+.bs-stepper-label {
+
+  color:  #969ca1;
+
+}
+
+.bs-stepper .step-trigger:hover {
+
+  background-color: rgb(212 238 255);
+  /* border: solid; */
+}
+
+// input array
+
+.ng2-tag-input__text-input{
+
+  font-family: inherit !important;
+}
+
+.ng2-tag-input__text-input::-webkit-input-placeholder { /* Edge */
+  color: #212529;
+}
+
 
 // table 
 
