--- a/frontend/src/app/components/layout/header/select-data-dates/select-custom-date/select-custom-date.component.html
+++ b/frontend/src/app/components/layout/header/select-data-dates/select-custom-date/select-custom-date.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="form-group">
         <label>Fecha Fin</label>
-        <app-date-time-picker (inputChange)="end=$event; aver($event)" [timeHidden]="true"></app-date-time-picker>        
+        <app-date-time-picker (inputChange)="end=$event;" [timeHidden]="true"></app-date-time-picker>        
     </div> 
     <div class="text-center">
-        <button class="btn btn-primary" [disabled]="!start||!end" (click)="response()">Guardar</button>
+        <button class="btn btn-primary" [disabled]="!start&&!end" (click)="response()">Guardar</button>
     </div>   
  </div>
