--- a/frontend/src/app/components/layout/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout/layout.component.html
@@ -4,7 +4,7 @@
 
     <div id="app-wrapper" class="cube" [ngClass]="{inLogin:isLogin}">
         <div id="app-active" class="cube-face face-front bg-light">
-            <div id="app-main-content" class="d-flex flex-column flex-lg-row h-100 position-relative w-100" >
+            <div id="app-main-content" class="d-flex flex-column flex-lg-row h-100 position-relative w-100 overflow-hidden" >
 
                 <section id="app-menu" class="h-lg-100 position-relative"  style="z-index:99">     
                     <app-menu></app-menu>
