--- a/frontend/src/app/components/sections/reservas/display/activities/tour/tour-activity-display.component.html
+++ b/frontend/src/app/components/sections/reservas/display/activities/tour/tour-activity-display.component.html
@@ -23,5 +23,5 @@
 </div>
 
 <ng-template #fullDates>
-    {{item | show:'tourActivity':'full_dates'}}
+    {{ $any(item | show:'tourActivity':'date_start')  | date: 'dd-MM-yy' }} - {{$any(item | show:'tourActivity':'date_end')  | date: 'dd-MM-yy' }}
 </ng-template>
