--- a/frontend/src/app/components/layout/header/header.component.html
+++ b/frontend/src/app/components/layout/header/header.component.html
@@ -1,11 +1,11 @@
-<div class="header-container w-100 d-flex flex-lg-column justify-content-between justify-content-lg-center align-items-center">
-    <div class="section-title bg-primary d-flex align-items-center p-0 text-light rounded-bottom ">
-        <div class="border-end text-light me-2 px-2">
+<div class="header-container w-100 d-flex flex-lg-column justify-content-between justify-content-lg-center align-items-center flex-wrap">
+    <div class="section-title d-flex align-items-center p-0 me-2 mb-2">
+        <div class="me-2 px-2 ci">
             <i class="fs-1 {{icon}}"></i>
         </div>
-        <h4 class="text-uppercase pe-3 m-0 fw-light">{{title}}</h4>
+        <h4 class="text-uppercase pe-3 m-0">{{title}}</h4>
     </div>
-    <div class="mt-1 mx-3">
+    <div >
         <p class="m-0 p-0 nav-link pointer dropdown-toggle" (click)="open()"><small>{{dateString}}</small></p>
     </div>
 </div>
