--- a/frontend/src/app/components/sections/login/login.component.html
+++ b/frontend/src/app/components/sections/login/login.component.html
@@ -41,7 +41,7 @@
     </div>
     <ng-template #log>
         <div class="m-auto h-100 d-flex justify-content-center align-items-center flex-column" >
-           <app-login-form (query)="slide=3;probar()"></app-login-form>
+           <app-login-form (query)="slide=3;login($event)"></app-login-form>
         </div>
     </ng-template>
 
@@ -53,9 +53,5 @@
             <h3 class="text-light mt-2">Cargando...</h3>
         </div>
     </ng-template>
-
-    
-     
-
 
 </div>
